<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    xmlns:vFont="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:background="@drawable/gradiant_bg"
    tools:context="com.wagona.maths.MainActivity">

    <include
        android:id="@+id/headerStrip"
        layout="@layout/header_stub" />

    <View
        android:id="@+id/deviderLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_05"
        android:layout_below="@+id/headerStrip"
        android:background="@color/colorPrimaryDark"></View>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footerStrip"
        android:layout_below="@+id/deviderLine">

        <LinearLayout
            android:id="@+id/containerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/headerStrip"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <com.wagona.maths.custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/about1"
                android:textColor="@color/dark_font"
                android:textSize="@dimen/sp_14"
                vFont:typeface="trebuchet_regular" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/white_shape_chex"
                android:elevation="@dimen/dp_10"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/dp_20">


                <com.wagona.maths.custom.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/dp_5"
                    android:gravity="center"
                    android:text="Our Ethos"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/sp_22"
                    vFont:typeface="trebuchet_bold" />

                <View

                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_05"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@drawable/shadow_bg">

                </View>


                <com.wagona.maths.custom.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/dp_15"
                    android:text="@string/about2"
                    android:textColor="@color/dark_font"
                    android:textSize="@dimen/sp_14"
                    vFont:typeface="trebuchet_regular" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/white_shape_chex"
                android:elevation="@dimen/dp_10"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/dp_20">


                <com.wagona.maths.custom.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/dp_5"
                    android:gravity="center"
                    android:text="Our Mission"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/sp_22"
                    vFont:typeface="trebuchet_bold" />

                <View

                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_05"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@drawable/shadow_bg">

                </View>


                <com.wagona.maths.custom.CustomTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/dp_15"
                    android:text="@string/about3"
                    android:textColor="@color/dark_font"
                    android:textSize="@dimen/sp_14"
                    vFont:typeface="trebuchet_regular" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>


    <ImageView
        android:id="@+id/footerStrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/numbers_falling" />


</RelativeLayout>